# ptmcmc-rotor

./: .gitignore  config.py  copy_of_ptmcmc_rotor_akilan.py  from_saved.py  log.txt  main.py  main_ptmcmc.py  model.py  nonpt_rotor.py  pyproject.toml  requirements.txt  results.md  rotor_big.py  rotor_v2.py  test.py  test2.py  time_logger.py  utils.py
bayesian_models/: bayesian_model.py  simple_gaussian.py
mcmc_runners/: PTMCMC_runner.py  hmc_runner.py  mcmc_runner.py  nuts_runner.py
