[project]
name = "rotor-ptmcmc"
version = "0.1.0"
description = "PTMCMC for the ARIADNE rotor"
authors = [
    {name = "Akilan Babu",email = "wertyyyy102@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tensorflow (>=2.18.0,<3.0.0)",
    "corner (>=2.2.3,<3.0.0)",
    "tensorflow-probability[tf] (>=0.25.0,<0.26.0)",
    "numpy (<2.1.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false